team or service page para issues fixed

--- a/content-creater.html
+++ b/content-creater.html
@@ -324,8 +324,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading"> Professional Content Creation Agency</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;"> Digital Minds On focuses on designing
+                            <div class="herobanner__text">
+                                <p class="banner-width" style="max-width: 100%;"> Digital Minds On focuses on designing
                                     only the best, appealing, and relevant content that will not only grab the target
                                     audience’s attention but also generate trust and sales. Whether a company needs to
                                     improve its current brand image or a start-up company wants to set an image for
