--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -328,8 +328,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Affordable Digital Marketing Services</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Digital marketing is a core strategy
+                            <div class="herobanner__text">
+                                <p class="banner-width" style="max-width: 100%">Digital marketing is a core strategy
                                     for any business, whether you are a budding startup or a large corporation trying to
                                     gain more ground in the market. With all these approaches and instruments out there,
                                     how do you begin? That’s where Digital Minds On comes in to provide all kinds of
