--- a/game-development-services.html
+++ b/game-development-services.html
@@ -329,8 +329,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Mobile Game Development </h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">At Digital Minds On, discover how to
+                            <div class="herobanner__text">
+                                <p style="max-width: 950px;">At Digital Minds On, discover how to
                                     create engaging mobile games, optimize performance, and deliver regular updates.
                                     Explore proven strategies for game monetization, user acquisition, and successful
                                     publishing. Learn to integrate cutting-edge technologies, enhance user experience,
