--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                             </div>
 
                             <div class="about__button">
-                                <a class="default__button" href="javascript:void(0);">LEARN MORE ABOUT</a>
+                                <a class="default__button" href="about">LEARN MORE ABOUT</a>
                             </div>
                         </div>
                     </div>
