--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -331,8 +331,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Mobile App Development Services</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;"> Digital Minds On provides
+                            <div class="herobanner__text">
+                                <p style="max-width: 100%;"> Digital Minds On provides
                                     comprehensive mobile development services, from initial ideation and app design to
                                     project launch and ongoing support. Our team is dedicated to helping businesses
                                     harness the power of mobile technologies to enhance operational efficiency, elevate
