--- a/network-services.html
+++ b/network-services.html
@@ -328,8 +328,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Managed IT Network Services Provider</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;"> At Digital Minds On, we understand
+                            <div class="herobanner__text">
+                                <p style="max-width: 100%;"> At Digital Minds On, we understand
                                     the vital role of computer networking in connecting devices through servers,
                                     routers, and switches to access the internet and exchange data seamlessly. In
                                     today’s business landscape, networking is essential for operations of all sizes. As
