--- a/seo-services.html
+++ b/seo-services.html
@@ -330,8 +330,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Affordable Search Engine Optimization Services</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;"> Digital Minds On provides
+                            <div class="herobanner__text">
+                                <p class="banner-width" style="max-width: 850px;"> Digital Minds On provides
                                     full-service SEO services for organizations and companies to get them seen online,
                                     targeted visitors, and practical results. We specialize in using the latest trends
                                     in marketing and pairing them with the most effective techniques to drive results
