--- a/software-development-services.html
+++ b/software-development-services.html
@@ -319,8 +319,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Custom Software Development Services</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Digital Minds On is a Software
+                            <div class="herobanner__text">
+                                <p style="max-width: 100%;">Digital Minds On is a Software
                                     Development Company that focuses on delivering Software Development Services that
                                     meet particular business requirements and corporate difficulties. Innovative
                                     application, to system integration and beyond, our aim is to provide the tools that
