--- a/team.html
+++ b/team.html
@@ -491,11 +491,11 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/hamid.png" alt="">
+                                    <img src="assets/img/team/daniyal-sb.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Hamid Raza</a></h6>
-                                    <p>Web Development</p>
+                                    <h6><a href="javascript:void(0)">Mr. Daniyal Amjad</a></h6>
+                                    <p>Javascript Developer</p>
                                 </div>
                                 <div class="team__member__icon">
                                     <ul>
@@ -582,11 +582,11 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Shoaib.png" alt="">
+                                    <img src="assets/img/team/hamid.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Shoaib Jamil</a></h6>
-                                    <p>Graphic Designer</p>
+                                    <h6><a href="javascript:void(0)">Mr. Hamid Raza</a></h6>
+                                    <p>Web Development</p>
                                 </div>
                                 <div class="team__member__icon">
                                     <ul>
