--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -330,8 +330,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">UX/UI Design Principles in Modern Mobile Applications</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Transform your ideas into seamless
+                            <div class="herobanner__text">
+                                <p class="banner-width" style="max-width: 100%;">Transform your ideas into seamless
                                     user experiences with Digital Minds On. Our expert team of 150+ design consultants,
                                     UX/UI specialists, researchers, and design engineers bring over 20 years of industry
                                     expertise to the table. At Digital Minds On, we blend innovation and precision to
