--- a/web-development-services.html
+++ b/web-development-services.html
@@ -327,8 +327,8 @@
                                 <div class="breadcrumbarea__title">
                                     <h2 class="heading">Web Development Services</h2>
                                 </div>
-                                <div class="breadcrumbarea___para">
-                                    <p class="banner-width" style="max-width: 750px;"> Partner with Digital Minds On, a
+                                <div class="herobanner__text">
+                                    <p style="max-width: 100%;"> Partner with Digital Minds On, a
                                         top-rated custom web development company, to build a high-performance website
                                         that delivers exceptional results. From creating engaging corporate sites to
                                         developing complex animations, we specialize in crafting digital experiences
