--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -326,8 +326,8 @@
                             <div class="breadcrumbarea__title">
                                 <h2 class="heading">Custom Wordpress Development Services Solution</h2>
                             </div>
-                            <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;"> At Digital Minds On, we specialize in
+                            <div class="herobanner__text">
+                                <p class="banner-width" style="max-width: 100%;"> At Digital Minds On, we specialize in
                                     maximizing your WordPress website’s performance with our top-notch WordPress
                                     development services. Our award-winning design and development team creates custom
                                     themes tailored to your brand, helping you capture more leads and boost online
