digital page fixed

--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -599,7 +599,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/seo.jpeg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -617,7 +617,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/pay.jpeg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -634,7 +634,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/social.jpeg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -652,7 +652,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/content.jpeg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -673,7 +673,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/mail.jpeg" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
