--- a/about.html
+++ b/about.html
@@ -304,7 +304,8 @@
 
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea" style="background: url(assets/img/about/about-2.png); background-repeat: no-repeat !important; background-size: cover !important; background-position: 100% 20% !important;">
+            <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
