--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,8 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(assets/img/about/about__bg__1.jpg);">
+            style="background: url(assets/img/about/about-1.png);">
+            <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
