--- a/project.html
+++ b/project.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>All Project | Multiple Themes Build | Digital Minds On </title>
-    <meta name="description" content="All Projects & Built with Multiple Themes for versatile, customized solutions to meet diverse business needs and goals.">
+    <meta name="description"
+        content="All Projects & Built with Multiple Themes for versatile, customized solutions to meet diverse business needs and goals.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -19,18 +20,18 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
- <!-- title scrollbar -->
- <script>
-    // Text for the title
-    let titleText = "All Project | Multiple Themes Build | Digital Minds On ";
-    let index = 0;
-    function scrollTitle() {
-        document.title = titleText.slice(index) + titleText.slice(0, index);
-        index = (index + 1) % titleText.length;
-    }
-    setInterval(scrollTitle, 200); 
-</script>
-<!-- title scrollbar -->
+    <!-- title scrollbar -->
+    <script>
+        // Text for the title
+        let titleText = "All Project | Multiple Themes Build | Digital Minds On ";
+        let index = 0;
+        function scrollTitle() {
+            document.title = titleText.slice(index) + titleText.slice(0, index);
+            index = (index + 1) % titleText.length;
+        }
+        setInterval(scrollTitle, 200); 
+    </script>
+    <!-- title scrollbar -->
 
 
     <script>
@@ -309,7 +310,8 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(assets/img/about/about__bg__1.jpg);">
+            style="background: url(assets/img/about/about-2.png); background-repeat: no-repeat !important; background-size: cover !important; background-position: 100% 20% !important;">
+            <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
