--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             </div>
             <div class="service-page">
                 <div class="container mt-5">
-                    <div class="service-section d-flex flex-column flex-md-row align-items-center">
+                    <div class=" row service-section">
                         <div class="col-md-6">
                             <h6>Our Services</h6>
                             <h3 class="mb-3" style=" font-size: 43px; line-height: 50px;">Premier Incredible Services by
