--- a/team.html
+++ b/team.html
@@ -460,7 +460,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/awaisoffice.png" alt="">
+                                    <img src="assets/img/team/awais-ali.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
