--- a/software-development-services.html
+++ b/software-development-services.html
@@ -134,9 +134,9 @@
             </div>
         </div>
 
-        <!-- header start -->
+          <!-- header start -->
 
-        <header>
+          <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
                     <div class="headerarea__main__wrapper position-relative">
@@ -223,6 +223,13 @@
             </div>
             <div class="mob_menu_wrapper container-fluid">
                 <div class="d-flex justify-content-between align-items-center">
+                    <div class="mobile__log">
+                        <a class="offcanvas__logo_link" href="/">
+                            <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
+                            <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                                class="light-mode">
+                        </a>
+                    </div>
                     <div class="offcanvas__header--menu__open ">
                         <a class="offcanvas__header--menu__open--btn" href="javascript:void(0)" data-offcanvas>
                             <svg xmlns="http://www.w3.org/2000/svg" class="ionicon offcanvas__header--menu__open--svg"
@@ -299,9 +306,9 @@
                 </nav>
             </div>
         </div>
+        
 
         <!-- End Offcanvas header menu -->
-
 
 
         <!-- breadcrumbarea__start -->
