--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Contact | Customer Support | Digital Minds On </title>
-    <meta name="description" content="To begin a live chat, click on "Chat with the Help Assistant" on the Digital
-        Minds On Support homepage. Please note, live chat is available in English only.">
+    <meta name="description" content="To begin a live chat, click on 'Chat with the Help Assistant' on the Digital Minds On Support homepage. Please note, live chat is available in English only.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
