--- a/software-development-services.html
+++ b/software-development-services.html
@@ -134,9 +134,9 @@
             </div>
         </div>
 
-          <!-- header start -->
+        <!-- header start -->
 
-          <header>
+        <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
                     <div class="headerarea__main__wrapper position-relative">
@@ -306,7 +306,7 @@
                 </nav>
             </div>
         </div>
-        
+
 
         <!-- End Offcanvas header menu -->
 
@@ -380,32 +380,37 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="web-development-services">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="software-development-services">Software Development
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital Marketing
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
+                                                Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress Development
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -416,7 +421,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="game-development-services">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -454,42 +460,17 @@
                                 </div>
 
                             </div>
-                            <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                                <form id="contact-form" class="contact-form" action="email.php" method="post">
-                                    <div class="row">
-                                        <div class="col-xl-12">
-                                            <div class="contact__input">
-                                                <input class="contact__common__input" type="text" name="con_name"
-                                                    id="con_name" placeholder="Your Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-12">
-                                            <div class="contact__input">
-                                                <input class="contact__common__input" type="text" name="con_email"
-                                                    id="con_email" placeholder="Email" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-12">
-                                            <div class="contact__input">
-                                                <input class="contact__common__input" type="text" name="phone"
-                                                    placeholder="Phone" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-12">
-                                            <textarea class="contact__common__input" name="con_message" id="con_message"
-                                                cols="30" rows="10" placeholder="write a message...."></textarea>
-                                        </div>
-                                        <div class="col-xl-12">
-                                            <div class="contact__button">
-                                                <button type="submit" value="submit" class="default__button"
-                                                    name="submit">SEND MESSAGE</button>
-                                                <p class="form-messege"></p>
-                                            </div>
-
-                                        </div>
+                                <!-- contact form -->
+                                <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
+                                    <div class="service__details__planning__heading">
+                                        <h6>Let's discuss your project with us</h6>
+                                        <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                            first step toward creating your product.</p>
+                                        <a class="default__button" href="contact">CONTACT US</a>
                                     </div>
-                                </form>
-                            </div>
+                                </div>
+                                <!-- contact form -->
+                          
 
 
                         </div>
