--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -463,43 +463,16 @@
 
 
                         </div>
-                        <!-- from -->
+                        <!-- contact form -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <form id="contact-form" class="contact-form" action="email.php">
-                                <div class="row">
-                                    <div class="col-xl-12">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_name"
-                                                id="con_name" placeholder="Your Name">
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_email"
-                                                id="con_email" placeholder="Email" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <textarea class="contact__common__input" name="con_message" id="con_message"
-                                            cols="30" rows="10" placeholder="write a message...."></textarea>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contact__button">
-                                            <button type="submit" value="submit" class="default__button"
-                                                name="submit">SEND MESSAGE</button>
-                                            <p class="form-messege"></p>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </form>
+                            <div class="service__details__planning__heading">
+                                <h6>Let's discuss your project with us</h6>
+                                <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                    first step toward creating your product.</p>
+                                <a class="default__button" href="contact">CONTACT US</a>
+                            </div>
                         </div>
+                        <!-- contact form -->
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
@@ -599,7 +572,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/seo.jpeg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/seo.jpeg" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -617,7 +591,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/pay.jpeg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/pay.jpeg" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -634,7 +609,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/social.jpeg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/social.jpeg" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -652,7 +628,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/content.jpeg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/content.jpeg" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -673,7 +650,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/digital/mail.jpeg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/digital/mail.jpeg" class="img-fluid rounded-start"
+                                        alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
