--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -389,32 +389,37 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="web-development-services">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="software-development-services">Software Development
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital Marketing
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
+                                                Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress Development
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -425,7 +430,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="game-development-services">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -464,43 +470,16 @@
 
 
                         </div>
-                        <!-- from -->
+                        <!-- contact form -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <form id="contact-form" class="contact-form" action="email.php">
-                                <div class="row">
-                                    <div class="col-xl-12">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_name"
-                                                id="con_name" placeholder="Your Name">
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_email"
-                                                id="con_email" placeholder="Email" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <textarea class="contact__common__input" name="con_message" id="con_message"
-                                            cols="30" rows="10" placeholder="write a message...."></textarea>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contact__button">
-                                            <button type="submit" value="submit" class="default__button"
-                                                name="submit">SEND MESSAGE</button>
-                                            <p class="form-messege"></p>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </form>
+                            <div class="service__details__planning__heading">
+                                <h6>Let's discuss your project with us</h6>
+                                <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                    first step toward creating your product.</p>
+                                <a class="default__button" href="contact">CONTACT US</a>
+                            </div>
                         </div>
+                        <!-- contact form -->
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
@@ -541,8 +520,9 @@
                                                     around.</p>
                                                 <p>Our strategic focus includes experience in design and development,
                                                     and we achieve all</p>
-                                                    <p> these by research, innovation, and applying what is current in design trends to
-                                                        produce a product that will offer the best to the users.</p>
+                                                <p> these by research, innovation, and applying what is current in
+                                                    design trends to
+                                                    produce a product that will offer the best to the users.</p>
                                             </div>
                                         </div>
                                     </div>
