--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 </nav>
             </div>
         </div>
-        
+
 
         <!-- End Offcanvas header menu -->
 
@@ -494,8 +494,8 @@
                                 achieve your organization’s optimum and make your mark in your field.
 
                             </p>
-                            <a href="contact" class="default__button mt-3"><i
-                                    class="bi bi-calendar-check"></i> Book Free
+                            <a href="contact" class="default__button mt-3"><i class="bi bi-calendar-check"></i> Book
+                                Free
                                 Consultation</a>
                         </div>
                     </div>
@@ -940,42 +940,16 @@
                         </ul>
                     </div>
                     <div class="col-md-6">
-                        <div class="contact__input__wrapper contact__grident__bg">
-                            <form id="contact-form" class="contact-form" action="email.php">
-                                <div class="row">
-                                    <div class="col-xl-12">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_name"
-                                                id="con_name" placeholder="Your Name">
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-6">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_email"
-                                                id="con_email" placeholder="Email" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-6">
-                                        <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone" required>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <textarea class="contact__common__input" name="con_message" id="con_message"
-                                            cols="30" rows="10" placeholder="write a message...."></textarea>
-                                    </div>
-                                    <div class="col-xl-12">
-                                        <div class="contact__button">
-                                            <button type="submit" value="submit" class="default__button"
-                                                name="submit">SEND MESSAGE</button>
-                                            <p class="form-messege"></p>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </form>
+                        <!-- contact form -->
+                        <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
+                            <div class="service__details__planning__heading">
+                                <h6>Let's discuss your project with us</h6>
+                                <p>Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                    first step toward creating your product.</p>
+                                <a class="default__button" href="contact">CONTACT US</a>
+                            </div>
                         </div>
+                        <!-- contact form -->
                     </div>
                 </div>
             </div>
