banner images fixed

--- a/about.html
+++ b/about.html
@@ -311,7 +311,7 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">About Page</h2>
+                                <h2 class="heading">About</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
