--- a/blog.html
+++ b/blog.html
@@ -302,7 +302,7 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(assets/img/about/about__bg__1.jpg);">
+            style="background: url(assets/img/herobaner/blog-img.png);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
@@ -675,10 +675,10 @@
                         </div>
                         <div class="pagination" data-aos="fade-up" data-aos-duration="1500">
                             <ul>
-                                <li><a class="common__gradient__bg active" href="#"><span>1</span></a></li>
-                                <li><a class="common__gradient__bg" href="#"><span>2</span></a></li>
-                                <li><a class="common__gradient__bg" href="#"><span>3</span></a></li>
-                                <li><a class="common__gradient__bg" href="#"><span><i
+                                <li><a class="common__gradient__bg active" href="javascript:void(0)"><span>1</span></a></li>
+                                <li><a class="common__gradient__bg" href="javascript:void(0)"><span>2</span></a></li>
+                                <li><a class="common__gradient__bg" href="javascript:void(0)"><span>3</span></a></li>
+                                <li><a class="common__gradient__bg" href="javascript:void(0)"><span><i
                                                 class="icofont-simple-right"></i></span></a></li>
                             </ul>
                         </div>
