--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-     <!-- title scrollbar -->
-     <script>
+    <!-- title scrollbar -->
+    <script>
         // Text for the title
         let titleText = "What is Mobile App Development | Web & App Design | Digital Minds on ";
         let index = 0;
@@ -314,7 +314,8 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea" style="background: url(assets/img/herobaner/app.png);">
+            <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
