--- a/team.html
+++ b/team.html
@@ -298,7 +298,8 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea " style="background: url(assets/img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea " style="background: url(assets/img/about/about-2.png); background-size: cover; background-position: 100% 100%;">
+            <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
