request page remove

--- a/content-creater.html
+++ b/content-creater.html
@@ -133,7 +133,6 @@
                 </div>
             </div>
         </div>
-        <!-- header start -->
 
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
@@ -211,7 +210,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -242,6 +241,7 @@
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
