--- a/team.html
+++ b/team.html
@@ -197,7 +197,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -225,12 +225,10 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-
-
-
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
@@ -298,7 +296,8 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea " style="background: url(assets/img/about/about-2.png); background-size: cover; background-position: 100% 100%;">
+        <div class="breadcrumbarea "
+            style="background: url(assets/img/about/about-2.png); background-size: cover; background-position: 100% 100%;">
             <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
@@ -821,7 +820,8 @@
                                 <h3>IN-DEPTH ANALYSIS AND DISCUSSION</h3>
                             </div>
                             <div class="blog__4__section__title__text">
-                                <p>Check out our software development blog to know more about software Company, new trends and business management ideas.</p>
+                                <p>Check out our software development blog to know more about software Company, new
+                                    trends and business management ideas.</p>
                             </div>
                             <div class="section__title__button">
                                 <a class="default__button" href="blog">VIEW ARCHIVE POST</a>
@@ -839,14 +839,16 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="what-is-mobile-application-development">What is Mobile APP Development?</a></h6>
+                                <h6><a href="what-is-mobile-application-development">What is Mobile APP Development?</a>
+                                </h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>Mobile application development is the process of designing, developing..
                                 </p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="what-is-mobile-application-development">READ MORE</a>
+                                <a class="default__button btn__black" href="what-is-mobile-application-development">READ
+                                    MORE</a>
                             </div>
                         </div>
                     </div>
