--- a/what-is-web-development.html
+++ b/what-is-web-development.html
@@ -212,7 +212,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -240,13 +240,10 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-
-
-
-
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
@@ -700,7 +697,7 @@
 
                             <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Conclusion</h2>
-                              
+
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Web development act as an important part of our society because it helps design and
