--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,7 @@
         </div>
         <!-- header start -->
 
+      
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
@@ -198,7 +199,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -226,14 +227,10 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-
-
-
-
-
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
