--- a/error.html
+++ b/error.html
@@ -198,7 +198,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -332,7 +332,7 @@
                 <div class="row">
                     <div class="col-xl-12 sp_bottom_80" data-aos="fade-up" data-aos-duration="1500">
                         <div class="error__img text-center">
-                            <img src="assets/img/contact/error.png" alt="">
+                            <img src="assets/img/contact/error.png" alt="img" style="width: 100%; height: 100%;">
                         </div>
                     </div>
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
