--- a/faq.html
+++ b/faq.html
@@ -199,7 +199,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -230,6 +230,7 @@
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
