--- a/game-development-services.html
+++ b/game-development-services.html
@@ -214,7 +214,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -242,10 +242,10 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
@@ -339,7 +339,7 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                    <!-- <a class="default__button" href="/">Home</a> -->
                                     <a class="default__button" href="contact">CONTACT US</a>
                                 </ul>
                             </div>
