--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -217,7 +217,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -248,6 +248,7 @@
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
