--- a/request-quote.html
+++ b/request-quote.html
@@ -277,7 +277,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -305,13 +305,10 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-                 
-
-
-
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
