--- a/software-development-services.html
+++ b/software-development-services.html
@@ -212,7 +212,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
