--- a/web-development-services.html
+++ b/web-development-services.html
@@ -136,7 +136,6 @@
             </div>
         </div>
         <!-- header start -->
-
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
@@ -213,7 +212,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -244,6 +243,7 @@
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
