--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -209,7 +209,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -237,12 +237,10 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-
-
-
                 </div>
             </div>
         </header>
+
 
         <!-- Start Offcanvas header menu -->
 
